npm run compile (server) | nvm use 14.21.3 && npm start (client) works for me

--- a/mailbag/client/package.json
+++ b/mailbag/client/package.json
@@ -4,7 +4,8 @@
   "description": "MailBag",
   "main": "main.tsx",
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "start": "npx webpack-dev-server"
   },
   "author": "Frank W. Zammetti",
   "license": "ISC",
