--- a/mailbag/client/tsconfig.json
+++ b/mailbag/client/tsconfig.json
@@ -10,6 +10,15 @@
     "jsx" : "react",
     "allowJs" : true,
     "baseUrl" : "./",
-    "paths" : { "components/*" : [ "src/components/*" ] }
-  }
+    "paths" : { "components/*" : [ "src/components/*" ] },
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+  },
+  "include": [ "src/**/*" ]
 }
