--- a/mailbag/client/package.json
+++ b/mailbag/client/package.json
@@ -28,6 +28,7 @@
     "@types/material-ui": "^0.21.7",
     "@types/react": "^16.9.16",
     "axios": "^0.19.0",
+    "dompurify": "^3.0.3",
     "normalize.css": "^8.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
