--- a/mailbag/client/package.json
+++ b/mailbag/client/package.json
@@ -31,6 +31,7 @@
     "dompurify": "^3.0.3",
     "normalize.css": "^8.0.1",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-quill": "^2.0.0"
   }
 }
