--- a/mailbag/client/package.json
+++ b/mailbag/client/package.json
@@ -32,6 +32,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-dropzone": "^14.2.3",
     "react-quill": "^2.0.0"
   }
 }
