--- a/mailbag/server/package.json
+++ b/mailbag/server/package.json
@@ -10,15 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^9.0.2",
     "emailjs-imap-client": "^3.0.7",
     "express": "^4.17.1",
     "mailparser": "^2.7.1",
+    "multer": "^1.4.5-lts.1",
     "nedb": "^1.8.0",
-    "nodemailer": "^6.3.0"
+    "nodemailer": "^6.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/mailparser": "^2.4.0",
+    "@types/multer": "^1.4.7",
     "@types/nedb": "^1.8.9",
     "@types/node": "^12.7.4",
     "@types/nodemailer": "^6.2.2",
